--- a/TheaterDatabase/Views/Home/AnalyticsPartials/_BudgetAverages.cshtml
+++ b/TheaterDatabase/Views/Home/AnalyticsPartials/_BudgetAverages.cshtml
@@ -1,11 +1,12 @@
 ﻿@model TheaterDatabase.ViewModels.Analytics_VMs.BudgetAverageVM
 
 
+<h3>Budget Averages By Club</h3>
 
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
-            <h3>average PTG budget vs average Footlighters budget</h3>
+            <h4>Compare average PTG budget and average Footlighters budget.</h4>
             @Html.Hidden("budgetAvgHidden", Json.Encode(Model.LstBudgetAverages))
             <canvas id="budget-avg-chart" width="800" height="450"></canvas>
         </div>
