--- a/TheaterDatabase/Views/Home/AnalyticsPartials/_MusicalCounts.cshtml
+++ b/TheaterDatabase/Views/Home/AnalyticsPartials/_MusicalCounts.cshtml
@@ -1,9 +1,12 @@
 ﻿@model TheaterDatabase.ViewModels.Analytics_VMs.MusicalsCountVM
 
+
+<h3>Musical vs Play Counts</h3>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
-            <h3>Musicals vs Plays</h3>
+            <h4>Compare shows done by students groups on campus by type.</h4>
             @Html.Hidden("musicalCountsHidden", Json.Encode(Model.LstMusicalCounts))
             <canvas id="musical-counts-chart" width="800" height="450"></canvas>
         </div>
