--- a/TheaterDatabase/Views/Home/CRUDPartials/_Staff.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Staff.cshtml
@@ -44,8 +44,8 @@
                         <td>
                             <button onclick="updateStaff(@item.IntStaffID)" class="m-1 btn btn-primary divYesEditing">Update</button>
                             <button onclick="editRow('staff', @item.IntStaffID)" class="m-1 btn btn-primary divNoEditing">Edit</button>
-                            <button onclick="deleteStaff(@item.IntStaffID)" class="m-1 btn btn-primary divNoEditing">Delete</button>
-                            <button onclick="cancelEditRow('staff', @item.IntStaffID)" class="m-1 btn btn-primary divYesEditing">Cancel</button>
+                            <button onclick="deleteStaff(@item.IntStaffID)" class="m-1 btn btn-danger divNoEditing">Delete</button>
+                            <button onclick="cancelEditRow('staff', @item.IntStaffID)" class="m-1 btn btn-secondary divYesEditing">Cancel</button>
                         </td>
                     </tr>
                 }
@@ -81,6 +81,6 @@
     </div>
     <div class="col divYesNewRow">
         <button class="m-1 btn btn-primary" onclick="insertStaff()">Insert</button>
-        <button class="m-1 btn btn-primary" onclick="hideInsertRow('staff')">Cancel Insert</button>
+        <button class="m-1 btn btn-secondary" onclick="hideInsertRow('staff')">Cancel Insert</button>
     </div>
 </div>
