--- a/TheaterDatabase/Views/Home/CRUDPartials/_Members.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Members.cshtml
@@ -32,8 +32,8 @@
                         <td>
                             <button onclick="updateMember(@item.IntMemberID)" class="m-1 btn btn-primary divYesEditing">Update</button>
                             <button onclick="editRow('members', @item.IntMemberID)" class="m-1 btn btn-primary divNoEditing">Edit</button>
-                            <button onclick="deleteMember(@item.IntMemberID)" class="m-1 btn btn-primary divNoEditing">Delete</button>
-                            <button onclick="cancelEditRow('members', @item.IntMemberID)" class="m-1 btn btn-primary divYesEditing">Cancel</button>
+                            <button onclick="deleteMember(@item.IntMemberID)" class="m-1 btn btn-danger divNoEditing">Delete</button>
+                            <button onclick="cancelEditRow('members', @item.IntMemberID)" class="m-1 btn btn-secondary divYesEditing">Cancel</button>
                         </td>
                     </tr>
                 }
@@ -62,7 +62,7 @@
         </div>
         <div class="col divYesNewRow">
             <button class="m-1 btn btn-primary" onclick="insertMember()">Insert</button>
-            <button class="m-1 btn btn-primary" onclick="hideInsertRow('members')">Cancel Insert</button>
+            <button class="m-1 btn btn-secondary" onclick="hideInsertRow('members')">Cancel Insert</button>
         </div>
     </div>
 
