--- a/TheaterDatabase/Views/Home/CRUDPartials/_Pits.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Pits.cshtml
@@ -51,8 +51,8 @@
                         <td>
                             <button onclick="updatePits(@item.IntPitID)" class="m-1 btn btn-primary divYesEditing">Update</button>
                             <button onclick="editRow('pits', @item.IntPitID)" class="m-1 btn btn-primary divNoEditing">Edit</button>
-                            <button onclick="deletePits(@item.IntPitID)" class="m-1 btn btn-primary divNoEditing">Delete</button>
-                            <button onclick="cancelEditRow('pits', @item.IntPitID)" class="m-1 btn btn-primary divYesEditing">Cancel</button>
+                            <button onclick="deletePits(@item.IntPitID)" class="m-1 btn btn-danger divNoEditing">Delete</button>
+                            <button onclick="cancelEditRow('pits', @item.IntPitID)" class="m-1 btn btn-secondary divYesEditing">Cancel</button>
                         </td>
                     </tr>
                 }
@@ -91,6 +91,6 @@
     </div>
     <div class="col divYesNewRow">
         <button class="m-1 btn btn-primary" onclick="insertPits()">Insert</button>
-        <button class="m-1 btn btn-primary" onclick="hideInsertRow('pits')">Cancel Insert</button>
+        <button class="m-1 btn btn-secondary" onclick="hideInsertRow('pits')">Cancel Insert</button>
     </div>
 </div>
