--- a/TheaterDatabase/Views/Home/CRUDPartials/_Shows.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Shows.cshtml
@@ -7,7 +7,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-12">
-            <table class="table table-bordered" id="shows-table">
+            <table class="table table-bordered table-striped" id="shows-table">
                 <thead>
                     <tr>
                         <th>
