--- a/TheaterDatabase/Views/Home/CRUDPartials/_Members.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Members.cshtml
@@ -30,10 +30,10 @@
                             @Html.EditorFor(model => model.StrName, new { htmlAttributes = new { @class = "form-control divYesEditing", @data_members = item.IntMemberID + "_strName", @Value = item.StrName } })
                         </td>
                         <td>
-                            <button onclick="updateMember(@item.IntMemberID)" class="m-1 btn btn-primary divYesEditing">Update</button>
-                            <button onclick="editRow('members', @item.IntMemberID)" class="m-1 btn btn-primary divNoEditing">Edit</button>
-                            <button onclick="deleteMember(@item.IntMemberID)" class="m-1 btn btn-danger divNoEditing">Delete</button>
-                            <button onclick="cancelEditRow('members', @item.IntMemberID)" class="m-1 btn btn-secondary divYesEditing">Cancel</button>
+                            <button onclick="updateMember(@item.IntMemberID)" class="m-1 btn btn-primary divYesEditing"><i class="fas fa-check-circle"></i></button>
+                            <button onclick="editRow('members', @item.IntMemberID)" class="m-1 btn btn-primary divNoEditing"><i class="fas fa-pen"></i></button>
+                            <button onclick="deleteMember(@item.IntMemberID)" class="m-1 btn btn-danger divNoEditing"><i class="fas fa-trash"></i></button>
+                            <button onclick="cancelEditRow('members', @item.IntMemberID)" class="m-1 btn btn-secondary divYesEditing"><i class="fas fa-window-close"></i></button>
                         </td>
                     </tr>
                 }
