--- a/TheaterDatabase/Views/Home/CRUDPartials/_Pits.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Pits.cshtml
@@ -49,10 +49,10 @@
                             <span>@Html.DisplayFor(modelItem => item.Show.StrName)</span>
                         </td>
                         <td>
-                            <button onclick="updatePits(@item.IntPitID)" class="m-1 btn btn-primary divYesEditing">Update</button>
-                            <button onclick="editRow('pits', @item.IntPitID)" class="m-1 btn btn-primary divNoEditing">Edit</button>
-                            <button onclick="deletePits(@item.IntPitID)" class="m-1 btn btn-danger divNoEditing">Delete</button>
-                            <button onclick="cancelEditRow('pits', @item.IntPitID)" class="m-1 btn btn-secondary divYesEditing">Cancel</button>
+                            <button onclick="updatePits(@item.IntPitID)" class="m-1 btn btn-primary divYesEditing"><i class="fas fa-check-circle"></i></button>
+                            <button onclick="editRow('pits', @item.IntPitID)" class="m-1 btn btn-primary divNoEditing"><i class="fas fa-pen"></i></button>
+                            <button onclick="deletePits(@item.IntPitID)" class="m-1 btn btn-danger divNoEditing"><i class="fas fa-trash"></i></button>
+                            <button onclick="cancelEditRow('pits', @item.IntPitID)" class="m-1 btn btn-secondary divYesEditing"><i class="fas fa-window-close"></i></button>
                         </td>
                     </tr>
                 }
