--- a/TheaterDatabase/Views/Home/AnalyticsPartials/_ShowsByInstrument.cshtml
+++ b/TheaterDatabase/Views/Home/AnalyticsPartials/_ShowsByInstrument.cshtml
@@ -17,7 +17,7 @@
             <div class="input-group mb-3">
                 @Html.EditorFor(model => model.StrSearch, new { htmlAttributes = new { @class = "form-control", @data_show_by_instrument = "strSearchTerm" } })
                 <div class="input-group-append">
-                    <button type="button" class="btn btn-info" onclick="updateShowsByInstrumentTable()">Search</button>
+                    <button type="button" class="btn btn-info" onclick="updateShowsByInstrumentTable()">Search  <i class="fas fa-search"></i></button>
                 </div>
             </div>
         </div>
