--- a/TheaterDatabase/Views/Home/CRUDPartials/_Staff.cshtml
+++ b/TheaterDatabase/Views/Home/CRUDPartials/_Staff.cshtml
@@ -42,10 +42,10 @@
                             <span>@Html.DisplayFor(modelItem => item.Show.StrName)</span>
                         </td>
                         <td>
-                            <button onclick="updateStaff(@item.IntStaffID)" class="m-1 btn btn-primary divYesEditing">Update</button>
-                            <button onclick="editRow('staff', @item.IntStaffID)" class="m-1 btn btn-primary divNoEditing">Edit</button>
-                            <button onclick="deleteStaff(@item.IntStaffID)" class="m-1 btn btn-danger divNoEditing">Delete</button>
-                            <button onclick="cancelEditRow('staff', @item.IntStaffID)" class="m-1 btn btn-secondary divYesEditing">Cancel</button>
+                            <button onclick="updateStaff(@item.IntStaffID)" class="m-1 btn btn-primary divYesEditing"><i class="fas fa-check-circle"></i></button>
+                            <button onclick="editRow('staff', @item.IntStaffID)" class="m-1 btn btn-primary divNoEditing"><i class="fas fa-pen"></i></button>
+                            <button onclick="deleteStaff(@item.IntStaffID)" class="m-1 btn btn-danger divNoEditing"><i class="fas fa-trash"></i></button>
+                            <button onclick="cancelEditRow('staff', @item.IntStaffID)" class="m-1 btn btn-secondary divYesEditing"><i class="fas fa-window-close"></i></button>
                         </td>
                     </tr>
                 }
