--- a/TheaterDatabase/Views/Shared/_Layout.cshtml
+++ b/TheaterDatabase/Views/Shared/_Layout.cshtml
@@ -65,6 +65,7 @@
     <script type="text/javascript" src="https://cdn.datatables.net/v/bs4/dt-1.10.20/b-1.6.1/b-colvis-1.6.1/r-2.2.3/datatables.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-colorschemes"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-deferred@1.0.1/dist/chartjs-plugin-deferred.min.js" integrity="sha256-l2AoA4DhbXUD6IAmk4nT0v+G5SbNgjsnx1hJBbnSCoo=" crossorigin="anonymous"></script>
     @Scripts.Render("~/bundles/global-scripts")
     @RenderSection("scripts", required: false)
 </body>
